fix styling errors that breaks the build

--- a/src/resources/elements/horizontal-scroller/horizontal-scroller.scss
+++ b/src/resources/elements/horizontal-scroller/horizontal-scroller.scss
@@ -8,7 +8,6 @@
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
-    width: calc(100% - calc(100vw - max-content));
     padding-left: auto;
     padding-right: auto;
     -webkit-overflow-scrolling: touch;
